src/objects/KS_LevenshteinDistance__mdt.object
<CustomObject>
    <fields>
        <fullName>KS_Distance__c</fullName>
        <label>Distance</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Levenshtein Distance</label>
    <pluralLabel>Levenshtein Distances</pluralLabel>
</CustomObject>